--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <header>Login Form</header>
-        <form action="#">
+        <form>
             <div class="field email">
                 <div class="input-area">
                     <input type="text" placeholder="Email / Username">
@@ -29,6 +29,7 @@
                 </div>
                 <div class="error error-txt">Password can't be blank</div>
             </div>
+            <p class="error-message"></p>
             
             <input type="submit" value="Login">
         </form>
